--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,8 +1,8 @@
 .card-container {
   position: relative;
-  width: 500px;
-  height: 650px;
-  left: 470px;
+  width: 250px;
+  height: 325px;
+  left: 50px;
   top: 100px;
   margin-bottom: 300px;
   background: #e5dccd;
@@ -10,23 +10,32 @@
   border-radius: 2px;
 }
 
-h1 {
-  position: absolute;
-  width: 330px;
+.card-contents {
+  position: relative;
+  bottom: 30px;
+}
+
+.title {
+  position: relative;
+  width: 180px;
   height: 114px;
-  margin: 20px 30px 20px;
-  bottom: 20px;
+  margin: 20px;
+  bottom: 50px;
   font-family: Rosarivo;
   font-style: normal;
   font-weight: normal;
-  font-size: 46px;
-  line-height: 65px;
+  font-size: 25px;
   color: #000000;
 }
 
 .issue-data {
   position: relative;
   display: inline-flex;
-  margin-left: 33px;
-  gap: 300px;
+  margin: 20px;
+  gap: 115px;
+  font-size: 12px;
+}
+
+.magic-pattern {
+  width: 250px;
 }
